# Seismic-Angle-Recognition

./: .gitignore  .gitmodules  HOWTO.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
models/: VAE.ckpt
seismic_angle_recognition/: allocatearraym.mod  axi_261.data  axi_341.data  axi_341.stat  axi_39.data  axi_430.data  axi_442.data  axi_457.data  axi_633.data  axi_644.data  axi_687.data  axi_729.data  axi_729.hist  axi_729.source  axi_825.data  axitra  axitra2py  convms  create_signals.py  dimension1.mod  dimension2.mod  fsourcem.mod  initdatam.mod  main.py  parameter.mod  plot_tools.py  reflect0m.mod  reflect1m.mod  reflect2m.mod  reflect3m.mod  reflect4m.mod  reflect5m.mod  train_model.py
seismic_angle_recognition/config/: config.yaml
seismic_angle_recognition/src/: axitra.py  axitra2py
