[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "seismic_angle_recognition"
version = "0.0.1"
description = "This module trains, tests, and validates a neural network to predict the arrival angle of a source relative to a reference station. It processes input features, learns angular relationships, and outputs accurate angle estimations."
authors = [
  { name = "Lorenzo Miele" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["seismic_angle_recognition"]
force_sort_within_sections = true
